--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 /*!
 Theme Name: Cocoon Child
-Description: Cocoon専用の子テーマ
+Description: Cocoon専用の子テーマ(Acoustic Station Ver.)
 Theme URI: https://wp-cocoon.com/
 Author: わいひら
 Author URI: https://nelog.jp/
@@ -14,8 +14,14 @@ Version:    1.1.3
 ** 子テーマ用のスタイルを書く
 ************************************/
 /*必要ならばここにコードを書く*/
-/* 全体 */
 
+/*
+親テーマにならってPCファーストで記述 
+*/
+
+/*---- 全体 ----*/
+
+/* テキスト系 */
 h1, h2, h3, h4, h5 {
   font-family: "Klee One", serif;
   font-weight: 400;
@@ -35,6 +41,29 @@ h3, .sidebar h3 {
   background: #fffaf4;
   border-left: solid 5px #ffaf58;
 }
+
+/* リンクのかかっているとこ */
+
+.entry-card-wrap {
+	background-color: #fff;
+	padding: 1rem;
+	border-radius: 10px;
+	box-shadow: 0 2px 4px 0 rgba(24, 44, 84, 0.1);	
+}
+.entry-card-wrap:hover {
+	background-color: #fff;
+	
+	/* なぜか1,4つ目の値を変更すると効かない? */
+	box-shadow: 0 15px 10px 0 rgba(24, 44, 84, 0.1);
+}
+
+/* サイドバーのウェジット領域 */
+.widget-sidebar {
+	background-color: #fff;
+	padding: 1rem;
+	border-radius: 10px;
+}
+
 
 /*-- ヘッダー --*/
 
@@ -63,6 +92,16 @@ padding: 10px 0;
 .navi-in > ul li {
 	height: 50px;
 	line-height: 50px;
+}
+
+/* コンテンツ全体 */
+
+.main {
+	background-color: inherit;
+}
+
+.sidebar {
+	background-color: inherit;
 }
 
 /* アーカイブページ */
